src/objects/Interaction_Mapping__c.object
<CustomObject>
    <description>Used to map fields from source Object to target Object in the Interactions process.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>A checkbox to activate an Interaction Mapping record.</description>
        <inlineHelpText>If checked, the Interaction Mapping is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insert_Null__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for checkboxes to prevent unmapped checkboxes from being written over to false.</description>
        <inlineHelpText>Used for checkboxes to prevent unmapped checkboxes from being written over to false.</inlineHelpText>
        <label>Insert Null</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interaction_Source_Field_API_Name__c</fullName>
        <description>The source field on the Interaction object you would like to map to a Target Object field. The value in this field must be in API format and matches an existing field on Interaction.</description>
        <inlineHelpText>The source field on the Interaction object you would like to map. Ensure this is in API format and matches the existing field on Interaction.</inlineHelpText>
        <label>Interaction Source Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip_Mapping__c</fullName>
        <description>Select the Interaction Sources that should ignore this mapping configuration. The values in this picklist should match the values in Interaction&apos;s &quot;Interaction Sources&quot; field.</description>
        <inlineHelpText>Select the Interaction Sources that should ignore this import configuration.</inlineHelpText>
        <label>Skip Mapping</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual Entry</fullName>
                </value>
                <value>
                    <fullName>Purchase List</fullName>
                </value>
                <value>
                    <fullName>Student Information System</fullName>
                </value>
                <value>
                    <fullName>Webform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Field_API_Name__c</fullName>
        <description>The Source Object field you would like to map to a Target Object field. The value in this field must be in API format and matches an existing field on the Source Object.</description>
        <inlineHelpText>The Source Object field you would like to map to a Target Object field. Ensure this is in API format and matches the existing field on the Source Object.</inlineHelpText>
        <label>Source Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object_API_Name__c</fullName>
        <description>The API name of the Source Object to map to the Target Object. When adding new values, ensure that you use the API name of the object.</description>
        <inlineHelpText>Select the Source Object to map to the Target Object.</inlineHelpText>
        <label>Source Object API Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Interaction__c</fullName>
                    <default>true</default>
                    <label>Interaction__c</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Field_API_Name__c</fullName>
        <description>The field on the Target Object you would like to map an Interaction field value to. The value in this field must be in API format and match an existing field on the Target Object.</description>
        <inlineHelpText>The field on the Target Object you would like to map to. Ensure this is in API format and matches the existing field on the Target Object.</inlineHelpText>
        <label>Target Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object_API_Name__c</fullName>
        <description>The API name of the Target Object to map Interaction data to. When adding new values, ensure that you use the API name of the object.</description>
        <inlineHelpText>Select the Target Object to map Source Object data to.</inlineHelpText>
        <label>Target Object API Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CampaignMember</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>hed__Affiliation__c</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Interaction__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Interaction Mapping</label>
    <listViews>
        <fullName>Affiliation</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Target_Object_API_Name__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <columns>Source_Field_API_Name__c</columns>
        <columns>Insert_Null__c</columns>
        <columns>Skip_Mapping__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Object_API_Name__c</field>
            <operation>equals</operation>
            <value>hed__Affiliation__c</value>
        </filters>
        <label>Affiliation</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Source_Object_API_Name__c</columns>
        <columns>Source_Field_API_Name__c</columns>
        <columns>Target_Object_API_Name__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <columns>Insert_Null__c</columns>
        <columns>Skip_Mapping__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CampaignMember</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Target_Object_API_Name__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <columns>Source_Field_API_Name__c</columns>
        <columns>Insert_Null__c</columns>
        <columns>Skip_Mapping__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Object_API_Name__c</field>
            <operation>equals</operation>
            <value>CampaignMember</value>
        </filters>
        <label>Campaign Member</label>
    </listViews>
    <listViews>
        <fullName>Contact</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Target_Object_API_Name__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <columns>Source_Field_API_Name__c</columns>
        <columns>Insert_Null__c</columns>
        <columns>Skip_Mapping__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Object_API_Name__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>Contact</label>
    </listViews>
    <listViews>
        <fullName>Interaction_to_Lead</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Target_Object_API_Name__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <columns>Source_Field_API_Name__c</columns>
        <columns>Insert_Null__c</columns>
        <columns>Skip_Mapping__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Object_API_Name__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filters>
        <label>Interaction to Lead</label>
    </listViews>
    <listViews>
        <fullName>Lead</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Target_Object_API_Name__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <columns>Interaction_Source_Field_API_Name__c</columns>
        <columns>Insert_Null__c</columns>
        <columns>Skip_Mapping__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Object_API_Name__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filters>
        <label>Lead</label>
    </listViews>
    <listViews>
        <fullName>Lead_to_Interaction</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Target_Object_API_Name__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <columns>Source_Field_API_Name__c</columns>
        <columns>Insert_Null__c</columns>
        <columns>Skip_Mapping__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Object_API_Name__c</field>
            <operation>equals</operation>
            <value>Interaction__c</value>
        </filters>
        <filters>
            <field>Source_Object_API_Name__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filters>
        <label>Lead to Interaction</label>
    </listViews>
    <listViews>
        <fullName>Opportunity</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Target_Object_API_Name__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <columns>Source_Field_API_Name__c</columns>
        <columns>Insert_Null__c</columns>
        <columns>Skip_Mapping__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Object_API_Name__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <label>Opportunity</label>
    </listViews>
    <listViews>
        <fullName>School</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Target_Object_API_Name__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <columns>Source_Field_API_Name__c</columns>
        <columns>Insert_Null__c</columns>
        <columns>Skip_Mapping__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_Field_API_Name__c</field>
            <operation>contains</operation>
            <value>School</value>
        </filters>
        <label>School</label>
    </listViews>
    <nameField>
        <displayFormat>INTMap-{000000}</displayFormat>
        <label>Interaction Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Disallow_Interaction_as_Target_wo_Lead</fullName>
        <active>true</active>
        <description>Interaction can only be the Target Object if Lead is the Source Object.</description>
        <errorConditionFormula>ISPICKVAL(Target_Object_API_Name__c, &quot;Interaction__c&quot;) &amp;&amp; NOT(ISPICKVAL(Source_Object_API_Name__c, &quot;Lead&quot;))</errorConditionFormula>
        <errorDisplayField>Target_Object_API_Name__c</errorDisplayField>
        <errorMessage>Invalid Objects: Interaction cannot be the Target Object unless Lead is the Source Object.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_Lead_as_Source_wo_Interaction</fullName>
        <active>true</active>
        <description>Lead can only be the Source Object if Interaction is the Target Object.</description>
        <errorConditionFormula>ISPICKVAL(Source_Object_API_Name__c, &quot;Lead&quot;) &amp;&amp; NOT(ISPICKVAL(Target_Object_API_Name__c, &quot;Interaction__c&quot;))</errorConditionFormula>
        <errorDisplayField>Source_Object_API_Name__c</errorDisplayField>
        <errorMessage>Invalid Objects: Lead cannot be the Source Object unless Interaction is the Target Object.</errorMessage>
    </validationRules>
</CustomObject>